--- a/cloud/RpmCloud/appsettings.json
+++ b/cloud/RpmCloud/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "RPM": {
-    "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-DEMO;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-PREPROD;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
