--- a/mobile/ios/rpm_swift/RPM/Info.plist
+++ b/mobile/ios/rpm_swift/RPM/Info.plist
@@ -26,6 +26,8 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+	<key>BaseURL</key>
+	<string>$(BASE_API_URL)</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
