fixes and connections

--- a/cloud/RPM.Job.Sync.Devices.iGlucose/appsettings.json
+++ b/cloud/RPM.Job.Sync.Devices.iGlucose/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "RPM": {
-    "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-DEMO;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "Server": "meditprodapi.azurewebsites.net",
+    "ConnectionString": "Server=tcp:rpmprodserver.database.windows.net,1433;Initial Catalog=RPMDEMOPROD;Persist Security Info=False;User ID=rpmprodserver;Password=!TESP%^@!123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "Server": "rpm-multivital-api.azurewebsites.net",
     "validate_url": "http://api.iglucose.com/devices/validate/",
     "devices_url": "http://api.iglucose.com/devices/?api_key=",
     "UserName": "TespAdmin",
