Single jon for billing

--- a/cloud/RPM.Job.Billing/RPM.Job.Billing.csproj
+++ b/cloud/RPM.Job.Billing/RPM.Job.Billing.csproj
@@ -5,30 +5,27 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerfileContext>..\RpmCloud</DockerfileContext>
   </PropertyGroup>
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
+	<ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RPM.Lib.Billing.Clynx\RPM.Lib.Billing.Clynx.csproj" />
-	  
-  </ItemGroup>
-
-  <ItemGroup>
+    <Reference Include="RPM.Lib.Billing.Clynx">
+      <HintPath>..\RPM.Lib.Billing.Clynx\bin\Debug\net8.0\RPM.Lib.Billing.Clynx.dll</HintPath>
+    </Reference>
     <Reference Include="RPM.Lib.Billing.MedIT">
       <HintPath>..\RPM.Lib.Billing.MedIT\bin\Debug\net8.0\RPM.Lib.Billing.MedIT.dll</HintPath>
     </Reference>
