connection strings updated

--- a/cloud/RPM.Job.Billing/appsettings.json
+++ b/cloud/RPM.Job.Billing/appsettings.json
@@ -11,7 +11,7 @@
     "TimerDelay": "1"
   },
   "RPM": {
-    "ConnectionString": "Server=tcp:rpmprodserver.database.windows.net,1433;Initial Catalog=RPMDEMOPROD;Persist Security Info=False;User ID=rpmprodserver;Password=!TESP%^@!123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-PREPROD-V2;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
