--- a/cloud/RPM.Job.Sync.Devices.iGlucose/appsettings.json
+++ b/cloud/RPM.Job.Sync.Devices.iGlucose/appsettings.json
@@ -7,11 +7,11 @@
   },
   "RPM": {
     "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-PREPROD-V2;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "Server": "meditprodapi.azurewebsites.net",
+    "Server": "cx-preprod-server.azurewebsites.net",
     "validate_url": "http://api.iglucose.com/devices/validate/",
     "devices_url": "http://api.iglucose.com/devices/?api_key=",
     "UserName": "TespAdmin",
-    "Password": "HdGUYOTG",
+    "Password": "6V7XdLPI",
     "APIKey": "40CC5100-58EC-4B71-8831-50CE67E198C9-1646059137324",
     "SMTP_ToMail": "rpmsupport@tesplabs.com",
     "SMTP": "smtp.office365.com"
