--- a/web/web.config
+++ b/web/web.config
@@ -9,7 +9,7 @@
                     <conditions>
                         <add input="{HTTPS}" pattern="off" ignoreCase="true" />
                     </conditions>
-                    <action type="Redirect" url="https://cx-preprod-client.azurewebsites.net/" redirectType="Permanent" appendQueryString="false" />
+                    <action type="Redirect" url="https://meditprodwebclient.azurewebsites.net/" redirectType="Permanent" appendQueryString="false" />
                 </rule>
                 <rule name="AngularJS Routes" stopProcessing="true">
                     <match url=".*" />
