--- a/cloud/RPM.Job.AlertsSummary.Priority/RPM.Job.AlertsSummary.Priority.csproj
+++ b/cloud/RPM.Job.AlertsSummary.Priority/RPM.Job.AlertsSummary.Priority.csproj
@@ -16,14 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\RPM.Lib.Billing.MedIT\RPM.Lib.Billing.MedIT.csproj" />
   </ItemGroup>
 
 </Project>
