--- a/mobile/ios/rpm_swift/Release.xcconfig
+++ b/mobile/ios/rpm_swift/Release.xcconfig
@@ -5,4 +5,4 @@
 //  Created by Tesplabs on 09/06/25.
 //
 
-BASE_API_URL = https:/$()/cx-dev-server.azurewebsites.net
+BASE_API_URL = https:/$()/cx-preprod-server.azurewebsites.net
