--- a/cloud/RPM.Job.Simulator.iGlucose/RPM.Job.Simulator.iGlucose.csproj
+++ b/cloud/RPM.Job.Simulator.iGlucose/RPM.Job.Simulator.iGlucose.csproj
@@ -12,7 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="appsettings.json" />
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
