Job fixes added, continuos and triggered

--- a/cloud/RPM.Job.Sync.Devices.Transtek/appsettings.json
+++ b/cloud/RPM.Job.Sync.Devices.Transtek/appsettings.json
@@ -6,13 +6,13 @@
     }
   },
   "RPM": {
-    "ConnectionString": "Server=tcp:rpmprodserver.database.windows.net,1433;Initial Catalog=RPMDEMOPROD;Persist Security Info=False;User ID=rpmprodserver;Password=!TESP%^@!123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "Server": "rpm-multivital-api.azurewebsites.net",
-    "validate_url": "http://api.iglucose.com/devices/validate/",
-    "devices_url": "http://api.iglucose.com/devices/?api_key=",
+    "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-DEV-MULTIVITAL;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "Server": "cx-dev-server.azurewebsites.net",
+    "validate_url": "https://api.connect.mio-labs.com/v1/devices/",
+    "devices_url": "https://api.connect.mio-labs.com/v1/devices",
     "UserName": "TespAdmin",
     "Password": "6V7XdLPI",
-    "APIKey": "40CC5100-58EC-4B71-8831-50CE67E198C9-1646059137324",
+    "APIKey": "fzpem7TmHB43vUgf6Sw0W3yOIwyJXzBEDZUQis48",
     "SMTP_ToMail": "rpmsupport@tesplabs.com",
     "SMTP": "smtp.office365.com"
   },
