--- a/cloud/RPM.Job.Sync.Devices.iGlucose/appsettings.json
+++ b/cloud/RPM.Job.Sync.Devices.iGlucose/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "RPM": {
-    "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-PREPROD-V2;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "Server": "cx-preprod-server.azurewebsites.net",
+    "ConnectionString": "Server=tcp:rpmserver.database.windows.net,1433;Initial Catalog=CLYNX-DEV-MULTIVITAL;Persist Security Info=False;User ID=rpmserver;Password=tesplabs@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "Server": "cx-dev-server.azurewebsites.net",
     "validate_url": "http://api.iglucose.com/devices/validate/",
     "devices_url": "http://api.iglucose.com/devices/?api_key=",
     "UserName": "TespAdmin",
