--- a/mobile/ios/rpm_swift/Debug.xcconfig
+++ b/mobile/ios/rpm_swift/Debug.xcconfig
@@ -5,5 +5,5 @@
 //  Created by Tesplabs on 09/06/25.
 //
 
-BASE_API_URL = https:/$()/cx-preprod-server.azurewebsites.net
+BASE_API_URL = https:/$()/c-lynxapi.azurewebsites.net
 
